--- a/metadata-editor.html
+++ b/metadata-editor.html
@@ -384,7 +384,6 @@
           <a class="octothorpe" href="#section-10">#</a>
         </div>
         <p>Manually unroll the type check to get around Jena&rsquo;s stupid type problems</p>
-
       </td>
       <td class=code>
         <div class='highlight'><pre>      <span class="k">if</span> <span class="o">(</span><span class="n">tryc</span><span class="o">(</span><span class="n">r</span><span class="o">,</span> <span class="n">classOf</span><span class="o">[</span><span class="kt">JSeq</span><span class="o">],</span> <span class="s">&quot;isSeq&quot;</span><span class="o">))</span>
@@ -463,8 +462,20 @@
       <span class="k">if</span> <span class="o">(</span><span class="n">fo</span><span class="o">.</span><span class="n">selectedFile</span> <span class="o">!=</span> <span class="kc">null</span><span class="o">)</span> 
         <span class="nc">XML</span><span class="o">.</span><span class="n">save</span><span class="o">(</span><span class="n">fo</span><span class="o">.</span><span class="n">selectedFile</span><span class="o">.</span><span class="n">toString</span><span class="o">(),</span> <span class="n">finaldoc</span><span class="o">);</span>
     <span class="o">}))</span>
-  <span class="o">}</span>
-  <span class="k">def</span> <span class="n">top</span> <span class="k">=</span> <span class="k">new</span> <span class="nc">MainFrame</span> <span class="o">{</span>
+  <span class="o">}</span></pre></div>
+      </td>
+    </tr>
+    <tr id='section-11'>
+      <td class=docs>
+        <div class="octowrap">
+          <a class="octothorpe" href="#section-11">#</a>
+        </div>
+        <p> Here we have the meat of the singleton gui object; a button which replaces itelf with the actual gui.
+ This whole thing should be pulled apart.</p>
+
+      </td>
+      <td class=code>
+        <div class='highlight'><pre>  <span class="k">def</span> <span class="n">top</span> <span class="k">=</span> <span class="k">new</span> <span class="nc">MainFrame</span> <span class="o">{</span>
     <span class="n">title</span> <span class="k">=</span> <span class="s">&quot;Metadata Editor&quot;</span>
     <span class="n">contents</span> <span class="k">=</span> <span class="nc">Button</span><span class="o">(</span><span class="s">&quot;Open CellML model&quot;</span><span class="o">)</span> <span class="o">{</span>
       <span class="k">val</span> <span class="n">f</span> <span class="k">=</span> <span class="k">new</span> <span class="nc">FileChooser</span><span class="o">()</span>
